examples/jpbasic_chkt_01.asl
func f1()
    var x1 : int
    var y1 : int
    read x1;
    x1 = x1 == y1;
    write x1 + y1;
endfunc

func main()
    var x1 : int
    if 2*x1 then
        x1 = x1 == x1 + x1; 
        x1 = x1 + 56 * y1;
        if x1 == 78 then
            write z1;
        endif
    endif
    write "bye1";
endfunc
